crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__checkpoint_subscription__subscription_object_lifecycle.snap
---
source: crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/checkpoint_subscription.rs
expression: "[cp1, cp2, cp3, cp4]"
---
[
  {
    "data": {
      "checkpoints": {
        "sequenceNumber": 9,
        "transactions": {
          "nodes": [
            {
              "digest": "AmNbYdVGdrxFB8syoJQA7tiqhp3492uTMSAmAHCLrL1P",
              "effects": {
                "objectChanges": {
                  "nodes": [
                    {
                      "inputState": {
                        "address": "0x08287e1370488d859a0d38fc8f3637b8ad90edc3c2c7f1fe7e400dc8edf4e9cb",
                        "version": 1,
                        "digest": "2HjHrMh8S1RV6xAKdmXb57Ms86MizTkdot65F2FJ9MGD",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x0000000000000000000000000000000000000000000000000000000000000002::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                            }
                          }
                        }
                      },
                      "outputState": {
                        "address": "0x08287e1370488d859a0d38fc8f3637b8ad90edc3c2c7f1fe7e400dc8edf4e9cb",
                        "version": 2,
                        "digest": "J9JYtcMR43ESjcqE8T89k8yLWrNk9BEQ7zuqzAe9w5sW",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x0000000000000000000000000000000000000000000000000000000000000002::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                            }
                          }
                        }
                      }
                    },
                    {
                      "inputState": null,
                      "outputState": {
                        "address": "0x4490732bd1161e713ab1c8a1bc17138bee8d5ecbd29fc34e5b5ca2ae18536df7",
                        "version": 2,
                        "digest": "9PMLMCDZqQpM9eEdttDd4vgkXvULnQRG9pzmuTntDFb5",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x636a27f7eded7176efe955e2f5d9072ddd4c9c9f590c63c86007996b82c484ca::wrapping::Item"
                            }
                          }
                        }
                      }
                    }
                  ]
                }
              }
            }
          ]
        }
      }
    }
  },
  {
    "data": {
      "checkpoints": {
        "sequenceNumber": 15,
        "transactions": {
          "nodes": [
            {
              "digest": "7pc8DhkZJrDaAVzXdpaVehfaksDbAeWBXz75BbmALHz3",
              "effects": {
                "objectChanges": {
                  "nodes": [
                    {
                      "inputState": {
                        "address": "0x099e6adec4338ef58ba4db9dbc846402212b1bcb79bc78c52547a2a6bcde795c",
                        "version": 1,
                        "digest": "FdZXtxam846MXiv3ZfPATxczssLZbJEsRQAq7GtT1fuG",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x0000000000000000000000000000000000000000000000000000000000000002::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                            }
                          }
                        }
                      },
                      "outputState": {
                        "address": "0x099e6adec4338ef58ba4db9dbc846402212b1bcb79bc78c52547a2a6bcde795c",
                        "version": 3,
                        "digest": "9SFk1uigXTW13QTPBXDaMS8z6SutTGzot1NsCs4J6EmP",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x0000000000000000000000000000000000000000000000000000000000000002::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                            }
                          }
                        }
                      }
                    },
                    {
                      "inputState": {
                        "address": "0x4490732bd1161e713ab1c8a1bc17138bee8d5ecbd29fc34e5b5ca2ae18536df7",
                        "version": 2,
                        "digest": "9PMLMCDZqQpM9eEdttDd4vgkXvULnQRG9pzmuTntDFb5",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x636a27f7eded7176efe955e2f5d9072ddd4c9c9f590c63c86007996b82c484ca::wrapping::Item"
                            }
                          }
                        }
                      },
                      "outputState": {
                        "address": "0x4490732bd1161e713ab1c8a1bc17138bee8d5ecbd29fc34e5b5ca2ae18536df7",
                        "version": 3,
                        "digest": "97ViNi9Mx3roWLp5wZTiKv57FjUToknr8HmP3AJVMDBw",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x636a27f7eded7176efe955e2f5d9072ddd4c9c9f590c63c86007996b82c484ca::wrapping::Item"
                            }
                          }
                        }
                      }
                    }
                  ]
                }
              }
            }
          ]
        }
      }
    }
  },
  {
    "data": {
      "checkpoints": {
        "sequenceNumber": 21,
        "transactions": {
          "nodes": [
            {
              "digest": "EcV4QZi1iPhpFRbUepVMjqTR6JRfG5Y9VAw4vSVyvBzP",
              "effects": {
                "objectChanges": {
                  "nodes": [
                    {
                      "inputState": {
                        "address": "0x4490732bd1161e713ab1c8a1bc17138bee8d5ecbd29fc34e5b5ca2ae18536df7",
                        "version": 3,
                        "digest": "97ViNi9Mx3roWLp5wZTiKv57FjUToknr8HmP3AJVMDBw",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x636a27f7eded7176efe955e2f5d9072ddd4c9c9f590c63c86007996b82c484ca::wrapping::Item"
                            }
                          }
                        }
                      },
                      "outputState": null
                    },
                    {
                      "inputState": null,
                      "outputState": {
                        "address": "0x9cb26653a6ac1fb87b47b53ee7119bb5ae58bcc180131be06988d4d6a08fa545",
                        "version": 4,
                        "digest": "HgsiNZVtyzFaZCYVEHtf8ZCgU45EVeSJoRKGZPW3h8pt",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x636a27f7eded7176efe955e2f5d9072ddd4c9c9f590c63c86007996b82c484ca::wrapping::Wrapper"
                            }
                          }
                        }
                      }
                    },
                    {
                      "inputState": {
                        "address": "0xc2a87f2c299dfad4e1db020243053595a58e058a173c885d65bd8f728bca1816",
                        "version": 1,
                        "digest": "Fce5u5JVjC2SYhCbNeXNfpvCsvEKY7epUEwBdQG1S1TF",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x0000000000000000000000000000000000000000000000000000000000000002::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                            }
                          }
                        }
                      },
                      "outputState": {
                        "address": "0xc2a87f2c299dfad4e1db020243053595a58e058a173c885d65bd8f728bca1816",
                        "version": 4,
                        "digest": "EBuqKcJhyP9UAz2cDMs8H1JAkQ2r4jMgdK7h3kbzTKkN",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x0000000000000000000000000000000000000000000000000000000000000002::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                            }
                          }
                        }
                      }
                    }
                  ]
                }
              }
            }
          ]
        }
      }
    }
  },
  {
    "data": {
      "checkpoints": {
        "sequenceNumber": 27,
        "transactions": {
          "nodes": [
            {
              "digest": "9myDaoAVL8oRcPbPXrZK6WoZix86Azofvu15tct4bML7",
              "effects": {
                "objectChanges": {
                  "nodes": [
                    {
                      "inputState": null,
                      "outputState": {
                        "address": "0x4490732bd1161e713ab1c8a1bc17138bee8d5ecbd29fc34e5b5ca2ae18536df7",
                        "version": 5,
                        "digest": "APu9pqunQ2y9Xv6ozKz89Nvm3cbuHqrWJLQmpvNw96SY",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x636a27f7eded7176efe955e2f5d9072ddd4c9c9f590c63c86007996b82c484ca::wrapping::Item"
                            }
                          }
                        }
                      }
                    },
                    {
                      "inputState": {
                        "address": "0x9cb26653a6ac1fb87b47b53ee7119bb5ae58bcc180131be06988d4d6a08fa545",
                        "version": 4,
                        "digest": "HgsiNZVtyzFaZCYVEHtf8ZCgU45EVeSJoRKGZPW3h8pt",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x636a27f7eded7176efe955e2f5d9072ddd4c9c9f590c63c86007996b82c484ca::wrapping::Wrapper"
                            }
                          }
                        }
                      },
                      "outputState": null
                    },
                    {
                      "inputState": {
                        "address": "0xdddb5be9c3b7e3051292d239eaae537c77f8c86c88082568575b8dba93268a48",
                        "version": 1,
                        "digest": "FWTUgHqTQy5HNBTw5wKiunz4pEgxLtrwJqp75PqQxHj4",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x0000000000000000000000000000000000000000000000000000000000000002::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                            }
                          }
                        }
                      },
                      "outputState": {
                        "address": "0xdddb5be9c3b7e3051292d239eaae537c77f8c86c88082568575b8dba93268a48",
                        "version": 5,
                        "digest": "5MejPpgPG9qqrwS6SXkEknYhv4gJfvbKBn69BTpWnLLr",
                        "asMoveObject": {
                          "contents": {
                            "type": {
                              "repr": "0x0000000000000000000000000000000000000000000000000000000000000002::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI>"
                            }
                          }
                        }
                      }
                    }
                  ]
                }
              }
            }
          ]
        }
      }
    }
  }
]
