crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__checkpoint_subscription__subscription_transactions_pagination_first.snap
---
source: crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/checkpoint_subscription.rs
expression: item
---
{
  "data": {
    "checkpoints": {
      "sequenceNumber": 3,
      "transactions": {
        "nodes": [
          {
            "digest": "GEvvSW1k7pjWmWMFTfjJd2wzqtMsytSyvQNtgMQPMDDF",
            "effects": {
              "status": "SUCCESS",
              "balanceChanges": {
                "nodes": [
                  {
                    "amount": "200",
                    "coinType": {
                      "repr": "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI"
                    }
                  },
                  {
                    "amount": "-2976200",
                    "coinType": {
                      "repr": "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI"
                    }
                  }
                ]
              }
            }
          }
        ],
        "edges": [
          {
            "cursor": "MTE="
          }
        ],
        "pageInfo": {
          "hasNextPage": true,
          "hasPreviousPage": false
        }
      }
    }
  }
}
