crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__checkpoint_subscription__subscription_transactions_pagination_last.snap
---
source: crates/sui-indexer-alt-e2e-tests/tests/graphql_subscription/checkpoint_subscription.rs
expression: item
---
{
  "data": {
    "checkpoints": {
      "sequenceNumber": 3,
      "transactions": {
        "nodes": [
          {
            "digest": "HtJJhkvrhSgNbeJZgni5f2PejYvyT6skoxrE8tgaNp55",
            "effects": {
              "status": "SUCCESS",
              "balanceChanges": {
                "nodes": [
                  {
                    "amount": "100",
                    "coinType": {
                      "repr": "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI"
                    }
                  },
                  {
                    "amount": "-2976100",
                    "coinType": {
                      "repr": "0x0000000000000000000000000000000000000000000000000000000000000002::sui::SUI"
                    }
                  }
                ]
              }
            }
          }
        ],
        "edges": [
          {
            "cursor": "MTI="
          }
        ],
        "pageInfo": {
          "hasNextPage": false,
          "hasPreviousPage": true
        }
      }
    }
  }
}
